2006-06-11  Edward Hervey  <edward@fluendo.com>

	* docs/random/design:
	Fleshed up design doc a bit more.

2006-06-08  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (next_stop_in_region_above_priority),
	(get_clean_toplevel_stack):
	Composition now looks for anything hiding the configured segment, in
	order to properly adjust the end of the configured segment.
	This should make default sources work.
	* gnl/gnloperation.c: (gnl_operation_class_init),
	(gnl_operation_init), (element_is_valid_filter),
	(gnl_operation_add_element), (gnl_operation_remove_element),
	(gnl_operation_set_sinks), (gnl_operation_set_property),
	(gnl_operation_get_property), (add_sink_pad), (remove_sink_pad),
	(synchronize_sinks), (gnl_operation_prepare):
	* gnl/gnloperation.h:
	First big update. Still some more work to do though.
	* tests/check/complex.c: (gnonlin_suite):
	Re-activated testsuite to check for 'hiding' situations.

2006-06-06  Edward Hervey  <edward@fluendo.com>

	* docs/random/design:
	Updated to real 0.10 behaviour + added details.

2006-05-31  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlsource.c: (gnl_source_prepare):
	initial seek event is in object time realm.

2006-05-23  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_dispose),
	(gnl_composition_ghost_pad_set_target), (update_pipeline),
	(gnl_composition_event_handler):
	Protect critical part with comp_objects_lock.
	Don't unref pad given to gnl_composition_ghost_pad_set_target().
	* tests/check/complex.c: (GST_START_TEST):
	* tests/check/gnlsource.c: (GST_START_TEST):
	* tests/check/simple.c: (GST_START_TEST):
	memleak fixes in tests.

2006-05-22  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (no_more_pads_object_cb),
	(update_pipeline):
	Change the composition's ghostpad target at the same time as we send the
	seek event. This avoids the case where we check for the pad availability
	too early (not present) and then never switch the ghostpad target.