@@ -1,3 +1,10 @@
+2006-06-12  Edward Hervey  <edward@fluendo.com>
+
+	* gnl/gnlcomposition.c: (next_stop_in_region_above_priority),
+	(get_stack_list):
+	Fixed wrong get_stack_list(), stop at the correct place.
+	Stop iterating as soon as possible in next_stop_in_region..().
+
 2006-06-11  Edward Hervey  <edward@fluendo.com>
 
 	* docs/random/design:
